Enhancements to churn prediction model

--- a/Análises/Churn Prediction.ipynb
+++ b/Análises/Churn Prediction.ipynb
@@ -2875,11 +2875,7 @@
     "\n",
     "Esses métodos de amostragem, no entanto, possuem **diversas desvantagens** (Weiss, 2004). O under-sampling descarta a exemplos da classe majoritária potencialmente úteis e pode, portanto, degradar o desempenho do classificador. Como o over-sampling introduz casos de treinamento adicionais, pode aumentar o tempo necessário para construir um classificador, e levar a casos de overfitting.\n",
     "\n",
-    "Além disso, **over-sampling simples não introduzem novos dados**, apenas replicam, portanto não tratam efetivamente a \"falta de dados\". A literatura mostra que o simples over-sampling é ineficaz para melhorar o reconhecimento da classe minoritária (Ling & Li, 1998; Drummond & Holte, 2003) e por que o under-sampling parece ter vantagem sobre o over-sampling  (Chen et al., 2004). Por essas razões, neste estudo **utilizaremos o under-sampling**.\n",
-    "\n",
-    "\n",
-    "Também será utilizado diversos modelos de classificação em *machine learning*, como **Logistic Regression**, **KNeighbors**, **Decision Tree**, **Random Forest**, **Support Vector Machine** e **XGBoost**. Usaremos a técnica de **Random Under Sampling** que o faz aleatóriamente e os testaremos nos modelos descritos anteriormente.\n",
-    "\n"
+    "Além disso, **over-sampling simples não introduzem novos dados**, apenas replicam, portanto não tratam efetivamente a \"falta de dados\". A literatura mostra que o simples over-sampling é ineficaz para melhorar o reconhecimento da classe minoritária (Ling & Li, 1998; Drummond & Holte, 2003) e por que o under-sampling parece ter vantagem sobre o over-sampling  (Chen et al., 2004). Por essas razões, neste estudo **utilizaremos o under-sampling**.\n"
    ]
   },
   {
@@ -3877,7 +3873,9 @@
    "cell_type": "code",
    "execution_count": 794,
    "id": "ef86fe42",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
